# logosai-api

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 001_create_logosus_schema.py  002_add_agent_registry_tables.py  003_add_user_memories.py  807622b10ed0_initial_user_model.py  94dfe5b09187_add_projects_sessions_messages.py  a3b7f2c45d91_add_documents_table.py  b4c8e3f56d92_add_marketplace_tables.py
app/: __init__.py  config.py  database.py  main.py
app/core/: __init__.py  deps.py  exceptions.py  security.py
app/middleware/: __init__.py  response_middleware.py  response_normalizer.py
app/models/: __init__.py  document.py  marketplace.py  message.py  project.py  session.py  user.py
app/models/logosus/: __init__.py  agent.py  analytics.py  base.py  conversation.py  document.py  memory.py  project.py  rag.py  session.py  user.py
app/routers/: __init__.py  agents.py  auth.py  chat.py  documents.py  health.py  marketplace.py  memory.py  ml_dashboard.py  monitoring.py  projects.py  rag.py  sessions.py  telegram.py  users.py
app/schemas/: __init__.py  agent.py  auth.py  chat.py  document.py  marketplace.py  memory.py  project.py  session.py  user.py
app/services/: __init__.py  acp_client.py  agent_registry_service.py  auth_service.py  chat_service.py  conversation_service.py  document_service.py  marketplace_service.py  memory_service.py  orchestrator_service.py  project_service.py  session_service.py  user_service.py
app/services/rag/: __init__.py  document_metadata.py  embedding_service.py  (+4 more)
docs/: ANALYSIS.md  PROJECT_PLAN.md
scripts/: restart.sh  start.sh  status.sh  stop.sh  telegram_poll.py
tests/: test_google_login.html  test_rag_integration.py
(+11 files in other folders)
